<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Item_Inicio"
        android:title="@string/Item_Inicio"
        android:icon="@drawable/ic_home_inicio"
        />
    <item
        android:id="@+id/Item_Chats"
        android:title="@string/Item_Chats"
        android:icon="@drawable/ic_chats"
        />
    <item
        android:id="@+id/Item_Vender"
        android:title="@string/Item_Vender"
        android:enabled="false"
        />
    <item
        android:id="@+id/Item_Meus_Anuncios"
        android:title="@string/Item_Meus_Anuncios"
        android:icon="@drawable/ic_my_favorite"
        />
    <item
        android:id="@+id/Item_Conta"
        android:title="@string/Item_Conta"
        android:icon="@drawable/ic_conta"
        />
</menu>