<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Mostrar a primera imagem do anuncio-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagemIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_imagem"
            android:scaleType="centerCrop"/>

        <!--Título do anuncio-->
        <TextView
            android:id="@+id/Tv_titulo"
            android:text="@string/Tv_titulo"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/imagemIv"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Descrição-->
        <TextView
            android:id="@+id/Tv_descricao"
            android:text="@string/Tv_descripcion"
            android:maxLines="3"
            android:layout_toEndOf="@+id/imagemIv"
            android:layout_below="@+id/Tv_titulo"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Direção-->
        <TextView
            android:id="@+id/Tv_direcao"
            android:text="@string/Tv_direccion"
            android:layout_toEndOf="@+id/imagemIv"
            android:layout_below="@id/Tv_descricao"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Condição-->
        <TextView
            android:id="@+id/Tv_condicao"
            android:text="@string/Tv_condicion"
            android:layout_toEndOf="@+id/imagemIv"
            android:layout_below="@id/Tv_direcao"
            android:textStyle="bold|italic"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Simbolo preço-->
        <TextView
            android:id="@+id/Tv_simbolo_preco"
            android:text="@string/Tv_simbolo_precio"
            android:layout_below="@id/Tv_direcao"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="13sp"
            android:layout_toEndOf="@+id/Tv_condicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Preço-->
        <TextView
            android:id="@+id/Tv_preco"
            android:text="@string/Tv_precio"
            android:layout_below="@+id/Tv_direcao"
            android:layout_toEndOf="@+id/Tv_simbolo_preco"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Data-->
        <TextView
            android:id="@+id/Tv_data"
            android:text="@string/Tv_fecha"
            android:layout_marginEnd="5dp"
            android:textSize="13sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/Tv_direcao"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Agregar anuncio a favorito-->
        <ImageButton
            android:id="@+id/Ib_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_no_favorito"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>