<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".opcao_login.LoginEmail">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Txt_Login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/login" />
        <!--Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/Et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--Senha  -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--Botão Ingressar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_ingressar"
            android:layout_width="180dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_marginTop="15dp"
            android:text="@string/Btn_ingressar"
            android:textAllCaps="true"

            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Txt_no_conta" />

            <TextView
                android:id="@+id/Txt_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Txt_registrar"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>