<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="0dp"
    app:contentPadding="8dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Imagem de perfil-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Iv_imagem_perfil"
            android:scaleType="centerCrop"
            android:src="@drawable/img_perfil"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <!--Nomes-->
        <TextView
            android:id="@+id/Tv_nomes_comentario"
            android:text="@string/Tv_nomes_comentario"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@id/Iv_imagem_perfil"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Data de publicação-->
        <TextView
            android:id="@+id/Tv_data_comentario"
            android:text="@string/Tv_fecha_comentario"
            android:layout_alignParentEnd="true"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Comentario-->
        <TextView
            android:id="@+id/Tv_comentario"
            android:text="@string/Tv_comentario"
            android:layout_marginStart="7dp"
            android:layout_below="@id/Tv_nomes_comentario"
            android:layout_toEndOf="@id/Iv_imagem_perfil"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:maxLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>