<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Txt_editar_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Txt_editar_p"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <RelativeLayout
            android:id="@+id/perfilRL"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/Txt_editar_p"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/img_perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_perfil" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABmudarimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_select_image"
                app:fabSize="mini" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/TIL_Nomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/perfilRL"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            >
            <EditText
                android:id="@+id/ET_Nomes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_nomes"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TIL_Nomes"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            >
            <EditText
                android:id="@+id/Et_d_nasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_d_nasc"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/RL_Cod_Tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TIL_Nasc"
            android:layout_marginTop="10dp"
            >
            <com.hbb20.CountryCodePicker
                android:id="@+id/selectCod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:ccp_rememberLastSelection="true"
                app:ccp_autoDetectCountry="true"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_toEndOf="@+id/selectCod"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                >
                <EditText
                    android:id="@+id/Et_telefone"
                    android:hint="@string/Et_telefone"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_atualizar"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:text="@string/Btn_atualizar"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            app:icon="@drawable/ic_edit"
            android:layout_centerInParent="true"
            android:layout_below="@id/RL_Cod_Tel"

            />

    </RelativeLayout>

</RelativeLayout>